--- a/0603_ID BY_PC.html
+++ b/0603_ID BY_PC.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <!--@css(/css/font.css)-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -193,7 +192,7 @@
     .scroll-section {
       position: relative;
       padding-top: 0vh;
-      border: 1px solid rgb(0, 255, 21);
+      /* border: 1px solid rgb(9, 255, 0); */
     }
 
     #scroll-section-0 h1 {
@@ -209,7 +208,7 @@
     }
 
     #scroll-section-5 {
-      padding-top: 70vh;
+      padding-top: 60vh;
     }
 
     #scroll-section-6 {
@@ -711,7 +710,7 @@
           <span style="font-size: 1.5rem;">자석구조로 보지않고도 붙이다.</span></p>
       </div>
       <div class="sticky-elem main-message g">
-        <p style="text-align: left;"><span style="color: #ed2225">Just Press</span><br>
+        <p style="text-align: left;"><span style="color: #ed2225">just Press</span><br>
           to detach<br>
           <span style="font-size: 1.5rem;">버튼하나로 떼다.</span></p>
       </div>
@@ -770,7 +769,7 @@
     </section>
 
     <section class="scroll-section" id="scroll-section-5">
-      <div style="font-size: 30px;">Bespoke Option</div>
+      <div style="font-size: 30px; font-weight: bold;">Bespoke Option</div>
 
 
       <div id="Preview">
