--- a/0603_ID BY_PC.html
+++ b/0603_ID BY_PC.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ID BY</title>
+  <link rel="stylesheet" href="https://use.typekit.net/zeg3gru.css">
   <style>
     @charset 'utf-8';
+
+    * {
+      font-family: futura-pt, sans-serif;
+      font-style: normal;
+    }
 
     html {
       line-height: 1.2;
@@ -161,7 +167,8 @@
     }
 
     html {
-      font-size: 14px;
+      /* font-size: 14px; */
+      font-size: 17px;
     }
 
     body {
@@ -192,7 +199,7 @@
     .scroll-section {
       position: relative;
       padding-top: 0vh;
-      /* border: 1px solid rgb(9, 255, 0); */
+      border: 1px solid rgb(255, 0, 0);
     }
 
     #scroll-section-0 h1 {
@@ -208,7 +215,7 @@
     }
 
     #scroll-section-5 {
-      padding-top: 60vh;
+      padding-top: 50vh;
     }
 
     #scroll-section-6 {
@@ -218,7 +225,6 @@
     }
 
     .normal-text {
-      font-weight: bold;
       text-align: center;
       line-height: 1.2;
       margin: 5px 0;
@@ -369,7 +375,6 @@
     }
 
     .main-message p {
-      font-weight: bold;
       text-align: center;
       line-height: 1.2;
     }
@@ -385,14 +390,12 @@
       margin: 0 auto;
       padding: 0 1rem;
       font-size: 0.8rem;
-      font-weight: bold;
       color: #4c4c4c;
       /* letter-spacing: -1px; */
     }
 
     .sticky-elem.desc-message.a {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       font-size: 1rem;
@@ -401,7 +404,6 @@
 
     .sticky-elem.desc-message.b {
       text-align: center;
-      font-weight: bold;
       bottom: 10vh;
       opacity: 0;
       color: #4c4c4c;
@@ -411,7 +413,6 @@
 
     .sticky-elem.desc-message.c {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       color: #4c4c4c;
@@ -421,7 +422,6 @@
 
     .sticky-elem.desc-message.k {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       color: #4c4c4c;
@@ -475,6 +475,7 @@
     .scroll-effect-end .sticky-elem {
       /* 스크롤 효과가 모두 끝나고, 아래 일반 콘텐츠 영역에서는 sticky-elem들을 모두 안보이도록 */
       display: none !important;
+      opacity: 0 !important;
     }
 
     .sticky-elem-canvas {
@@ -647,7 +648,7 @@
     }
 
     #scroll-section-5 {
-      height: 1250px;
+      height: 1350px;
     }
 
     .colour-pallet>button:hover {
@@ -684,17 +685,17 @@
         <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message a">
-        <p><strong>The New Kind</strong></p>
+        <p>The New Kind</p>
       </div>
       <div class="sticky-elem main-message b">
-        <p style="font-weight: 900;"><strong>ID BY</strong></p>
+        <p><strong style="font-weight: bold;">ID BY</strong></p>
       </div>
-      <div class="sticky-elem desc-message a">
+      <div class="sticky-elem desc-message a">                        
         <p>
           Basic l <span class="txt_gradient_01">Bespoke</span>
         </p>
       </div>
-      <div class="sticky-elem main-message c">
+      <div class="sticky-elem main-message c">                 
         <p>This ain't just another id case.</p>
       </div>
 
@@ -705,22 +706,22 @@
         <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message f">
-        <p style="text-align: left;">Attach<br>
-          <span style="color: #00986b">with magnets</span><br>
+        <p style="text-align: left;"><span style="font-weight: bold;">Attach</span><br>
+          <span style="color: #00986b" >with magnets</span><br>
           <span style="font-size: 1.5rem;">자석구조로 보지않고도 붙이다.</span></p>
       </div>
       <div class="sticky-elem main-message g">
         <p style="text-align: left;"><span style="color: #ed2225">just Press</span><br>
-          to detach<br>
+          <span style="font-weight: bold;">to detach</span><br>
           <span style="font-size: 1.5rem;">버튼하나로 떼다.</span></p>
       </div>
       <div class="sticky-elem main-message h">
-        <p style="text-align: left;">Various ways<br>
+        <p style="text-align: left;"><span style="font-weight: bold;">Various ways</span><br>
           <span style="color: #0078f2">to wear</span><br>
           <span style="font-size: 1.5rem;">다양한 착용방식을 제공하다.</span></p>
       </div>
       <div class="sticky-elem main-message i">
-        <p>Designed for everyone<br>
+        <p>Designed for <span style="font-weight: bold;">everyone</span><br>
           <span style="font-size: 1.5rem;">모든 직군의 사용자를 위해 디자인하다.</span></p>
       </div>
     </section>
@@ -731,9 +732,9 @@
       </video>
       <div class="normal-text">
         <p style="text-align: left;">
-          <span style="font-size: 3rem;">Never <br>
-            comes off,<br>
-            without pressing<br>
+          <span style="font-size: 3rem;" style="font-weight: bold;">Never <br>
+            comes off,<br></span>
+            <span style="font-size: 3rem;">without pressing<br>
           </span>
           누르지 않으면,절대 빠지지 않는.
         </p>
@@ -745,7 +746,7 @@
         <canvas id="video-canvas-2" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message k">
-        <p>How sophisticated it is!<br>
+        <p>How <span style="font-weight: bold;">sophisticated</span> it is!<br>
           <span style="font-size: 1.5rem;">이 모든걸 가능하게 만든 놀랄만큼 정교한 구조.</span></p>
       </div>
     </section>
@@ -756,14 +757,15 @@
       </div>
       <div class="sticky-elem main-message m">
         <p>Available in<br>
-          10 Colours,<br>
-          7 Parts</p>
+          <span style="font-weight: bold;">
+            10 Colours,<br>
+            7 Parts</p></span>
       </div>
       <div class="sticky-elem main-message n">
         <p style="font-size: 1.5rem;">Imagine,<br>
-          a great<br>
-          <span style="font-size: 3rem;">10<sup>7</sup><br></span>
-          combination<br>
+          <span style="font-weight: bold;">a great<br>
+          <span style="font-size: 3rem;">10<sup style="font-size: 2rem">7</sup><br></span>
+          combination<br></span>
           무려 천만가지의 커스텀 조합.</p>
       </div>
     </section>
@@ -917,10 +919,10 @@
         <canvas id="video-canvas-4" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message o">
-        <p style="text-align: left;">Just,<br>slide<br><span style="font-size: 1.5rem;">직관적인<br>슬라이드 구조로,</span></p>
+        <p style="text-align: left;">Just,<br><span style="font-weight: bold;">slide</span><br><span style="font-size: 1.5rem;">직관적인<br>슬라이드 구조로,</span></p>
       </div>
       <div class="sticky-elem main-message p">
-        <p style="text-align: left;">holds<br>two card<br><span style="font-size: 1.5rem;">두 장의 카드를 수납하다.</span></p>
+        <p style="text-align: left;">holds<br><span style="font-weight: bold;">two card</span><br><span style="font-size: 1.5rem;">두 장의 카드를 수납하다.</span></p>
       </div>
     </section>
 
@@ -1725,9 +1727,10 @@
         },
         {
           //2
-          type: 'normal',
+          type: 'sticky',
+          // type: 'normal',
           scrollHeight: 0,
-          // heightNum: 5,
+          heightNum: 1.2,
           objs: {
             container: document.querySelector('#scroll-section-2')
           }
@@ -1740,7 +1743,6 @@
           objs: {
             container: document.querySelector('#scroll-section-3'),
             messageK: document.querySelector('#scroll-section-3 .main-message.k'),
-            // messageM: document.querySelector('#scroll-section-3 .desc-message.k'),
             canvas: document.querySelector('#video-canvas-2'),
             context: document.querySelector('#video-canvas-2').getContext('2d'),
             videoImages: []
@@ -1752,8 +1754,6 @@
             canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
             messageK_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
             messageK_opacity_out: [1, 0, { start: 0.85, end: 0.95 }]
-            // messageM_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            // messageM_opacity_out: [1, 0, { start: 0.85, end: 0.95 }]
           }
         },
         {
@@ -1773,18 +1773,19 @@
             videoImageCount: 50,
             imageSequence: [0, 49],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
+            canvas_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
             messageO_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
             messageO_opacity_out: [1, 0, { start: 0.35, end: 0.45 }],
             messageP_opacity_in: [0, 1, { start: 0.5, end: 0.6 }],
-            messageP_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
+            messageP_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
           }
         },
         {
           //5
-          type: 'normal',
+          // type: 'normal',
+          type: 'sticky',
           scrollHeight: 0,
-          // heightNum: 5,
+          heightNum: 1.3,
           objs: {
             container: document.querySelector('#scroll-section-5')
           }
@@ -1800,9 +1801,9 @@
             canvas: document.querySelector('.image-blend-canvas'),
             context: document.querySelector('.image-blend-canvas').getContext('2d'),
             imagesPath: [
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/white3.jpg',
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/gray3.jpg',
-              'https://framebystore.cafe24.com/sujin_code_test/ID%20BY/7/black3.jpg'
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-white.png',
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-gray.png',
+              'https://framebystore.cafe24.com/sungyun/frameby-produt-detail/img/idby/basic-line-m-black.png'
             ],
             images: []
           },
@@ -1831,11 +1832,11 @@
             videoImageCount: 96,
             imageSequence: [0, 95],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99 }],
+            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
             messageS_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
             messageS_opacity_out: [1, 0, { start: 0.4, end: 0.5 }],
             messageT_opacity_in: [0, 1, { start: 0.55, end: 0.65 }],
-            messageT_opacity_out: [1, 0, { start: 0.9, end: 0.99 }]
+            messageT_opacity_out: [1, 0, { start: 0.85, end: 0.95 }]
           }
         }
       ];
@@ -2058,18 +2059,20 @@
               const objs = sceneInfo[6].objs;
               const values = sceneInfo[6].values;
 
-              const widthRatio = window.innerWidth / objs.canvas.width;
-              const heightRatio = window.innerHeight / objs.canvas.height;
-              let canvasScaleRatio;
+              // const widthRatio = window.innerWidth / objs.canvas.width;
+              // const heightRatio = window.innerHeight / objs.canvas.height;
+              // let canvasScaleRatio;
 
-              if (widthRatio <= heightRatio) {
-                canvasScaleRatio = heightRatio;
-              } else {
-                canvasScaleRatio = widthRatio;
-              }
+              // if (widthRatio <= heightRatio) {
+              //   canvasScaleRatio = heightRatio;
+              // } else {
+              //   canvasScaleRatio = widthRatio;
+              // }
 
-              objs.canvas.style.transform = `scale(${canvasScaleRatio})`;
-              objs.context.drawImage(objs.images[0], 0, 0);
+              // objs.canvas.style.transform = `scale(${canvasScaleRatio})`;
+              // objs.context.drawImage(objs.images[0], 0, 0);
+              
+              objs.canvas.classList.remove('sticky');
             }
             break;
           case 6:
@@ -2170,6 +2173,9 @@
 
           case 7:
             // console.log('7 paly');
+
+
+
             let sequence5 = Math.round(calcValues(values.imageSequence, currentYOffset));
             objs.context.drawImage(objs.videoImages[sequence5], 0, 0);
 
@@ -2191,8 +2197,15 @@
 
       function scrollLoop() {
         enterNewScene = false;
-        // prevScrollHeight = 1165;
-        prevScrollHeight = 1071;
+        // prevScrollHeight = 1071;
+        if (window.innerWidth < 1370) {
+          // 아이패드 상세 페이지 주문 창 높이
+          // prevScrollHeight = 1359;
+          prevScrollHeight = 1000;
+        } else {
+          prevScrollHeight = 1071;
+        }
+
 
         for (let i = 0; i < currentScene; i++) {
           prevScrollHeight += sceneInfo[i].scrollHeight;
@@ -2274,12 +2287,15 @@
         });
       });
 
-      // window.addEventListener('resize', () => {
-      //   if (window.innerWidth > 1367) {
-      //     window.location.reload();
-      //   }
-      // });
-      // window.addEventListener('orientationchange', setLayout);
+      window.addEventListener('resize', () => {
+        if (window.innerWidth < 1367) {
+          setLayout();
+          sceneInfo[6].values.rectStartY = 0;
+        }
+      });
+
+      window.addEventListener('orientationchange', setLayout);
+
       setCanvasImages();
     })();
 
