--- a/0603_ID BY_mobile.html
+++ b/0603_ID BY_mobile.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ID BY</title>
+  <link rel="stylesheet" href="https://use.typekit.net/zeg3gru.css">
   <style>
     @charset 'utf-8';
 
-    html {
-      line-height: 1.2;
-      word-wrap: break-word;
+    * {
+      font-family: futura-pt, sans-serif;
+      font-style: normal;
     }
 
     body {
@@ -161,7 +162,8 @@
     }
 
     html {
-      font-size: 14px;
+      /* font-size: 14px; */
+      font-size: 17px;
     }
 
     body {
@@ -172,7 +174,7 @@
     }
 
     p {
-      line-height: 1.6;
+      line-height: 1.2;
       text-align: center;
     }
 
@@ -193,7 +195,7 @@
     .scroll-section {
       position: relative;
       padding-top: 0vh;
-      /* border: 1px solid rgb(0, 211, 70); */
+      /* border: 1px solid rgb(0, 17, 255); */
     }
 
     #scroll-section-0 h1 {
@@ -205,7 +207,7 @@
     }
 
     #scroll-section-2 {
-      padding-top: 70vh;
+      padding-top: 80vh;
     }
     #scroll-section-5 {
       padding-top: 50vh;
@@ -218,7 +220,6 @@
     }
 
     .normal-text {
-      font-weight: bold;
       text-align: center;
       line-height: 1.2;
       margin: 5px 0;
@@ -266,7 +267,7 @@
       align-items: center;
       justify-content: center;
       top: 25vh;
-      left: 10vw;
+      left: 8vw;
       margin: 5px 0;
       height: 3em;
       font-size: 1.5rem;
@@ -277,7 +278,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      top: 35vh;
+      top: 30vh;
       left: 45vw;
       margin: 5px 0;
       height: 3em;
@@ -289,7 +290,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      top: 35vh;
+      top: 30vh;
       margin: 5px 0;
       height: 3em;
       font-size: 1.5rem;
@@ -356,7 +357,6 @@
     }
 
     .main-message p {
-      font-weight: bold;
       text-align: center;
       line-height: 1.2;
     }
@@ -372,13 +372,11 @@
       margin: 0 auto;
       padding: 0 1rem;
       font-size: 0.8rem;
-      font-weight: bold;
       color: #4c4c4c;
     }
 
     .sticky-elem.desc-message.a {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       font-size: 0.8rem;
@@ -386,7 +384,6 @@
 
     .sticky-elem.desc-message.b {
       text-align: center;
-      font-weight: bold;
       bottom: 10vh;
       opacity: 0;
       color: #4c4c4c;
@@ -395,7 +392,6 @@
 
     .sticky-elem.desc-message.c {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       color: #4c4c4c;
@@ -404,7 +400,6 @@
 
     .sticky-elem.desc-message.k {
       text-align: center;
-      font-weight: bold;
       bottom: 15vh;
       opacity: 0;
       color: #4c4c4c;
@@ -525,10 +520,7 @@
     }
 
     .logoposition {
-      /* position: relative; */
       position: absolute;
-      /* top: 5px;
-  left: 7px; */
       width: 160px;
       height: 100px;
       display: block;
@@ -798,17 +790,17 @@
         <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message a">
-        <p><strong>The New Kind</strong></p>
+        <p>The New Kind</p>
       </div>
       <div class="sticky-elem main-message b">
-        <p><strong>ID BY</strong></p>
+        <p><strong style="font-weight: bold;">ID BY</strong></p>
       </div>
-      <div class="sticky-elem desc-message a">
+      <div class="sticky-elem desc-message a">                        
         <p>
           Basic l <span class="txt_gradient_01">Bespoke</span>
         </p>
       </div>
-      <div class="sticky-elem main-message c">
+      <div class="sticky-elem main-message c">                 
         <p>This ain't just another id case.</p>
       </div>
 
@@ -819,22 +811,22 @@
         <canvas id="video-canvas-1" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message f">
-        <p style="text-align: left;">Attach<br>
+        <p style="text-align: left;"><span style="font-weight: bold;">Attach</span><br>
           <span style="color: #00986b">with magnets</span><br>
           <span class="font08">자석구조로 보지않고도 붙이다.</span></p>
       </div>
       <div class="sticky-elem main-message g">
         <p style="text-align: left;"><span style="color: #ed2225">just Press</span><br>
-          to detach<br>
+          <span style="font-weight: bold;">to detach</span><br>
           <span class="font08">버튼하나로 떼다.</span></p>
       </div>
       <div class="sticky-elem main-message h">
-        <p style="text-align: left;">Various ways<br>
+        <p style="text-align: left;"><span style="font-weight: bold;">Various ways</span><br>
           <span style="color: #0078f2">to wear</span><br>
           <span class="font08">다양한 착용방식을 제공하다.</span></p>
       </div>
       <div class="sticky-elem main-message i">
-        <p>Designed for everyone<br>
+        <p>Designed for <span style="font-weight: bold;">everyone</span><br>
           <span class="font08">모든 직군의 사용자를 위해 디자인하다.</span></p>
       </div>
     </section>
@@ -845,10 +837,9 @@
       </video>
       <div class="normal-text">
         <p style="text-align: left;">
-          <span class="font15" >Never <br>
-            comes off,<br>
-            without pressing<br>
-          </span>
+          <span class="font15" style="font-weight: bold;">Never <br>
+            comes off,<br></span>
+            <span class="font15">without pressing</span><br>
           누르지 않으면,절대 빠지지 않는.
         </p>
       </div>
@@ -859,7 +850,7 @@
         <canvas id="video-canvas-2" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message k">
-        <p>How sophisticated it is!<br>
+        <p>How <span style="font-weight: bold;">sophisticated</span> it is!<br>
           <span class="font08">이 모든걸 가능하게 만든 놀랄만큼 정교한 구조.</span></p>
       </div>
     </section>
@@ -870,14 +861,15 @@
       </div>
       <div class="sticky-elem main-message m">
         <p>Available in<br>
-          10 Colours,<br>
-          7 Parts</p>
+          <span style="font-weight: bold;">
+            10 Colours,<br>
+            7 Parts</p></span>
       </div>
       <div class="sticky-elem main-message n">
         <p style="font-size: 1rem;">Imagine,<br>
-          a great<br>
-          <span style="font-size: 2.5rem;">10<sup>7</sup><br></span>
-          combination<br>
+          <span style="font-weight: bold;">a great<br>
+          <span style="font-size: 2.5rem;">10<sup style="font-size: 1.5rem">7</sup><br></span>
+          combination<br></span>
           무려 천만가지의 커스텀 조합.</p>
       </div>
     </section>
@@ -1029,10 +1021,10 @@
         <canvas id="video-canvas-4" width="1920" height="1080"></canvas>
       </div>
       <div class="sticky-elem main-message o">
-        <p style="text-align: left;">Just,<br>slide<br><span style="font-size: 1rem;">직관적인<br>슬라이드 구조로,</span></p>
+        <p style="text-align: left;">Just,<br><span style="font-weight: bold;">slide</span><br><span style="font-size: 1rem;">직관적인<br>슬라이드 구조로,</span></p>
       </div>
       <div class="sticky-elem main-message p">
-        <p style="text-align: left;">holds<br>two card<br><span style="font-size: 1rem;">두 장의 카드를 수납하다.</span></p>
+        <p style="text-align: left;">holds<br><span style="font-weight: bold;">two card</span><br><span style="font-size: 1rem;">두 장의 카드를 수납하다.</span></p>
       </div>
     </section>
  
@@ -1794,22 +1786,22 @@
             videoImageCount: 37,
             imageSequence: [0, 36],
             canvas_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
-            canvas_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
+            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99 }],
             messageA_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
-            messageA_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
+            messageA_opacity_out: [1, 0, { start: 0.9, end: 0.99 }],
             messageB_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
             messageB_opacity_out: [1, 0, { start: 0.4, end: 0.5 }],
             messageC_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
             messageC_opacity_out: [1, 0, { start: 0.4, end: 0.5 }],
             messageD_opacity_in: [0, 1, { start: 0.55, end: 0.6 }],
-            messageD_opacity_out: [1, 0, { start: 0.8, end: 0.9 }]
+            messageD_opacity_out: [1, 0, { start: 0.9, end: 0.99 }]
 
           }
         },
         {
           //1
           type: 'sticky',
-          heightNum: 3,
+          heightNum: 5,
           scrollHeight: 0,
           objs: {
             container: document.querySelector('#scroll-section-1'),
@@ -1854,7 +1846,6 @@
           objs: {
             container: document.querySelector('#scroll-section-3'),
             messageK: document.querySelector('#scroll-section-3 .main-message.k'),
-            // messageM: document.querySelector('#scroll-section-3 .desc-message.k'),
             canvas: document.querySelector('#video-canvas-2'),
             context: document.querySelector('#video-canvas-2').getContext('2d'),
             videoImages: []
@@ -1885,11 +1876,11 @@
             videoImageCount: 36,
             imageSequence: [0, 35],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
+            canvas_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
             messageO_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
             messageO_opacity_out: [1, 0, { start: 0.35, end: 0.45 }],
             messageP_opacity_in: [0, 1, { start: 0.5, end: 0.6 }],
-            messageP_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
+            messageP_opacity_out: [1, 0, { start: 0.8, end: 0.9 }],
           }
         },
         {
@@ -1897,7 +1888,7 @@
           type: 'sticky',
           // type: 'normal',
           scrollHeight: 0,
-          heightNum: 1.5,
+          heightNum: 1.7,
           objs: {
             container: document.querySelector('#scroll-section-5')
           }
@@ -1944,11 +1935,11 @@
             videoImageCount: 96,
             imageSequence: [0, 95],
             canvas_opacity_in: [0, 1, { start: 0.01, end: 0.1 }],
-            canvas_opacity_out: [1, 0, { start: 0.9, end: 0.99 }],
+            canvas_opacity_out: [1, 0, { start: 0.85, end: 0.95 }],
             messageS_opacity_in: [0, 1, { start: 0.1, end: 0.2 }],
             messageS_opacity_out: [1, 0, { start: 0.45, end: 0.54 }],
             messageT_opacity_in: [0, 1, { start: 0.55, end: 0.65 }],
-            messageT_opacity_out: [1, 0, { start: 0.9, end: 0.99 }]
+            messageT_opacity_out: [1, 0, { start: 0.85, end: 0.95 }]
           }
         }
       ];
@@ -2055,11 +2046,11 @@
         const scrollHeight = sceneInfo[currentScene].scrollHeight;
         const scrollRatio = currentYOffset / scrollHeight;
 
-        console.log(currentScene);
+        // console.log(currentScene);
         switch (currentScene) {
           case 0:
             let sequence = Math.round(calcValues(values.imageSequence, currentYOffset));
-            objs.context.drawImage(objs.videoImages[sequence], 0, 0);
+            // objs.context.drawImage(objs.videoImages[sequence], 0, 0);
 
             if (scrollRatio <= 0.3) {
               //in
@@ -2087,7 +2078,7 @@
 
           case 1:
             let sequence2 = Math.round(calcValues(values.imageSequence, currentYOffset));
-            objs.context.drawImage(objs.videoImages[sequence2], 0, 0);
+            // objs.context.drawImage(objs.videoImages[sequence2], 0, 0);
 
             if (scrollRatio <= 0.5) {
               objs.canvas.style.opacity = calcValues(values.canvas_opacity_in, currentYOffset);
@@ -2131,7 +2122,7 @@
           case 3:
             // console.log('3 paly');
             let sequence3 = Math.round(calcValues(values.imageSequence, currentYOffset));
-            objs.context.drawImage(objs.videoImages[sequence3], 0, 0);
+            // objs.context.drawImage(objs.videoImages[sequence3], 0, 0);
 
             if (scrollRatio <= 0.5) {
               objs.canvas.style.opacity = calcValues(values.canvas_opacity_in, currentYOffset);
@@ -2146,7 +2137,7 @@
           case 4:
             // console.log('4 paly');
             let sequence4 = Math.round(calcValues(values.imageSequence, currentYOffset));
-            objs.context.drawImage(objs.videoImages[sequence4], 0, 0);
+            // objs.context.drawImage(objs.videoImages[sequence4], 0, 0);
 
             if (scrollRatio <= 0.2) {
               objs.canvas.style.opacity = calcValues(values.canvas_opacity_in, currentYOffset);
@@ -2281,7 +2272,7 @@
           case 7:
             // console.log('7 paly');
             let sequence5 = Math.round(calcValues(values.imageSequence, currentYOffset));
-            objs.context.drawImage(objs.videoImages[sequence5], 0, 0);
+            // objs.context.drawImage(objs.videoImages[sequence5], 0, 0);
 
             if (scrollRatio <= 0.5) {
               objs.canvas.style.opacity = calcValues(values.canvas_opacity_in, currentYOffset);
